--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "hardhat-contract-sizer": "^2.10.0"
   },
   "dependencies": {
+    "@ethereumjs/util": "^9.0.3",
     "@openzeppelin/contracts": "^4.9.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ethereumjs-abi": "^0.6.8",
+    "web3": "^4.8.0"
   }
 }
