--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 node_modules
-.env
 coverage
 coverage.json
 typechain
 typechain-types
 
-# Hardhat files
-cache
-artifacts
 
 # Dev files
-.secrets
+.secret
+.env
